--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 IoT section</title>
+    <title>10 IoT </title>
     <style>
         body {
             font-family: Segoe UI, Arial, sans-serif;
@@ -135,7 +135,7 @@
             <a href="https://www.teknixstuff.com">Go back To teknixstuff.com</a>
         </div>
         <div class="content">
-            <h1>10 IoT's Section is Under Construction</h1>
+            <h1>10 IoT site is Under Construction</h1>
             <p>My main goal is to make this site look as aero as possible, lol.</p>
             <p>You can support me on my YouTube channel!</p>
             <div class="actions">
