--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <a href="#" onclick="showInfo('accounts')">User Accounts</a>
             <a href="#" onclick="showInfo('appearance')">Appearance and Personalization</a>
             <a href="#" onclick="showInfo('system-specs')">System Specs</a>
-            <a href="https://www.teknixstuff.com">Go back To teknixstuff.com</a>
+            <a href="https://teknixstuff.com">Go Back to Teknixstuff.com</a>
         </div>
         <div class="content">
             <h1>10 IoT site is under construction !</h1>
